--- a/pages/18942.html
+++ b/pages/18942.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -374,14 +374,26 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>connected graph</em> is a <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> which is <a class='existingWikiWord' href='/nlab/show/inhabited+object'>non-empty</a> and where each <a class='existingWikiWord' href='/nlab/show/pair'>pair</a> of <a class='existingWikiWord' href='/nlab/show/vertex'>vertices</a> is connected by a sequence of <a class='existingWikiWord' href='/nlab/show/edge'>edges</a>.</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/inhabited+object'>inhabited</a> <a class='existingWikiWord' href='/nlab/show/graph'>graph</a> has two notions of being connected:</p>
 
-<p>For usual definitions of <a class='existingWikiWord' href='/nlab/show/category'>categories</a> of graphs, this should be the <a class='existingWikiWord' href='/nlab/show/connected+object'>connected objects</a> in these categories.</p>
+<ul>
+<li>
+<p><strong>weak connected</strong> - it cannot be decomposed as the <a class='existingWikiWord' href='/nlab/show/disjoint+union'>disjoint union</a> of two inhabited graphs.</p>
+</li>
+
+<li>
+<p><strong>strong or path connected</strong> - each <a class='existingWikiWord' href='/nlab/show/pair'>pair</a> of <a class='existingWikiWord' href='/nlab/show/vertex'>vertices</a> is connected by a sequence of <a class='existingWikiWord' href='/nlab/show/edge'>edges</a> or in other words every <a class='existingWikiWord' href='/nlab/show/hom-set'>homset</a> of its <a class='existingWikiWord' href='/nlab/show/free+category'>free category</a> is inhabited.</p>
+</li>
+</ul>
+
+<p>If a graph’s edges are <a class='existingWikiWord' href='/nlab/show/graph#undirected_graphs'>undirected</a> these two notions coincide while if <a class='existingWikiWord' href='/nlab/show/graph#directed_graphs'>directed</a> the stronger condition implies the weaker.</p>
+
+<p>For the various categories of graphs, which of their objects are <em>weakly connected</em> correspond to the general notion of <a class='existingWikiWord' href='/nlab/show/connected+object'>connected objects</a> in these categories.</p>
 
 <h2 id='examples'>Examples</h2>
 
 <ul>
-<li>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/power+series'>formal power series</a> of <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitudes</a> labeled by those <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> whose underlying <a class='existingWikiWord' href='/nlab/show/graph'>graphs</a> are connected is called the <em><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>effective action</a></em> <math class='maruku-mathml' display='inline' id='mathml_b4365405e6f4a07ef6ce6edd42bad4d80e781803_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>eff</mi></msub></mrow><annotation encoding='application/x-tex'>S_{eff}</annotation></semantics></math>. The <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential</a> of the effective action then yields the full <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> over all Feynman diagrams. See at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> for more.</li>
+<li>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/power+series'>formal power series</a> of <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>Feynman amplitudes</a> labeled by those <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> whose underlying <a class='existingWikiWord' href='/nlab/show/graph'>graphs</a> are connected is called the <em><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>effective action</a></em> <math class='maruku-mathml' display='inline' id='mathml_bdd69979ee6b947303e6168812c3cbf1ba6f98e4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>S</mi> <mi>eff</mi></msub></mrow><annotation encoding='application/x-tex'>S_{eff}</annotation></semantics></math>. The <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential</a> of the effective action then yields the full <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> over all Feynman diagrams. See at <em><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a></em> for more.</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -395,14 +407,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 17, 2018 09:39:38 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.24.237.95)
+  Revised on January 18, 2018 18:22:32 
+  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
+  (71.112.33.65)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/connected+graph" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/connected+graph/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/connected+graph" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/connected+graph" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/connected+graph" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/connected+graph/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/connected+graph" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/connected+graph" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
