--- a/pages/18936.html
+++ b/pages/18936.html
@@ -434,14 +434,16 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>, its <em>factorial</em> <math class='maruku-mathml' display='inline' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>!</mo><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k! \in \mathbb{N}</annotation></semantics></math> is the number obtained by <a class='existingWikiWord' href='/nlab/show/multiplication'>multiplying</a> all natural numbers smaller or equal to <math class='maruku-mathml' display='inline' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a34c38c8b3ecbbc2bb4a39a403b0d8f17ffc39c8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>!</mo><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mn>1</mn><mo>⋅</mo><mn>2</mn><mo>⋅</mo><mn>3</mn><mo>⋅</mo><mn>4</mn><mo>⋅</mo><mi>⋯</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>k</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>⋅</mo><mi>k</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_7993c7e474b9e904ae3d6e81806c1e893adf350f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k \in \mathbb{N}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/natural+number'>natural number</a>, its <em>factorial</em> <math class='maruku-mathml' display='inline' id='mathml_7993c7e474b9e904ae3d6e81806c1e893adf350f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>!</mo><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>k! \in \mathbb{N}</annotation></semantics></math> is the number obtained by <a class='existingWikiWord' href='/nlab/show/multiplication'>multiplying</a> all natural numbers smaller or equal to <math class='maruku-mathml' display='inline' id='mathml_7993c7e474b9e904ae3d6e81806c1e893adf350f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_7993c7e474b9e904ae3d6e81806c1e893adf350f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>!</mo><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mn>1</mn><mo>⋅</mo><mn>2</mn><mo>⋅</mo><mn>3</mn><mo>⋅</mo><mn>4</mn><mo>⋅</mo><mi>⋯</mi><mo>⋅</mo><mo stretchy='false'>(</mo><mi>k</mi><mo>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>⋅</mo><mi>k</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   k!
   \;\coloneqq\;
   1 \cdot 2 \cdot 3 \cdot 4 \cdot \cdots \cdot (k-1) \cdot k
   \,.
 
 </annotation></semantics></math></div>
+<p>In <a class='existingWikiWord' href='/nlab/show/combinatorics'>combinatorics</a>, the definition usually extends to <math class='maruku-mathml' display='inline' id='mathml_7993c7e474b9e904ae3d6e81806c1e893adf350f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>k = 0</annotation></semantics></math> by setting <math class='maruku-mathml' display='inline' id='mathml_7993c7e474b9e904ae3d6e81806c1e893adf350f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>!</mo><mo>=</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0! = 1</annotation></semantics></math>.</p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -469,14 +471,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 16, 2018 10:52:53 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on January 19, 2018 11:13:06 
+  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
+  (212.91.104.18)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/factorial" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/factorial/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/factorial" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/factorial" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/factorial" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/factorial/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/factorial" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/factorial" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
