--- a/pages/11611.html
+++ b/pages/11611.html
@@ -1114,6 +1114,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/false+vacuum'>false vacuum</a>, <a class='existingWikiWord' href='/nlab/show/tachyon'>tachyon</a>, <a class='existingWikiWord' href='/nlab/show/Coleman-De+Luccia+instanton'>Coleman-De Luccia instanton</a></p>
 </li>
 
@@ -1161,14 +1165,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 12, 2018 19:30:24 
+  Revised on January 19, 2018 15:41:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Coleman-De+Luccia+instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coleman-De+Luccia+instanton/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Coleman-De+Luccia+instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coleman-De+Luccia+instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Coleman-De+Luccia+instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coleman-De+Luccia+instanton/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Coleman-De+Luccia+instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coleman-De+Luccia+instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
