--- a/pages/6321.html
+++ b/pages/6321.html
@@ -529,6 +529,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
 
 <ul>
@@ -542,6 +546,14 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
 </li>
 </ul>
 </li>
@@ -1402,6 +1414,18 @@ margin-left: 0em;
 
 <p>and (<a href='#Scharf95'>Scharf 95, section 0.0</a>).</p>
 
+<p>Discussion of <a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> includes</p>
+
+<ul>
+<li id='Scharf96'>
+<p><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, <em>Vacuum stability in quantum field theory</em>, Nuovo Cim. A109 (1996) 1605-1607 (<a href='http://inspirehep.net/record/432208/'>spire:432208</a>)</p>
+</li>
+
+<li id='Nikolic01'>
+<p><a class='existingWikiWord' href='/nlab/show/Hrvoje+Nikoli%C4%87'>Hrvoje Nikolić</a>, <em>Physical stability of the QED vacuum</em>, 2001 (<a href='https://arxiv.org/abs/hep-ph/0105176'>arXiv:hep-ph/0105176</a>)</p>
+</li>
+</ul>
+
 <p>The rigorous construction of <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a> QED in <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is worked out in</p>
 
 <ul>
@@ -1501,14 +1525,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2018 09:53:52 
+  Revised on January 19, 2018 16:14:33 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+electrodynamics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+electrodynamics/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/quantum+electrodynamics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+electrodynamics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
