--- a/pages/18951.html
+++ b/pages/18951.html
@@ -312,10 +312,16 @@ margin-left: 0em;
 <li><a href='http://www.irb.hr/eng/Research/Divisions/Division-of-Theoretical-Physics/Particle-Physics-and-Cosmology-Group/Hrvoje-Nikolic'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f82383d4bc3abca5b68365f93cb337b339805cdf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_feac59928debdf40b4bd100ce1e8d9338f654d6c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Casimir+effect'>Casimir effect</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -325,14 +331,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 19, 2018 16:11:13 
+  Revised on January 20, 2018 15:21:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Hrvoje+Nikoli%C4%87" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Hrvoje+Nikoli%C4%87" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Hrvoje+Nikoli%C4%87/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Hrvoje+Nikoli%C4%87" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Hrvoje+Nikoli%C4%87" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
