--- a/pages/11611.html
+++ b/pages/11611.html
@@ -1114,6 +1114,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+diagram'>vacuum diagram</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
 </li>
 
@@ -1165,14 +1169,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 19, 2018 15:41:13 
+  Revised on January 20, 2018 17:12:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Coleman-De+Luccia+instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coleman-De+Luccia+instanton/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Coleman-De+Luccia+instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coleman-De+Luccia+instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Coleman-De+Luccia+instanton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Coleman-De+Luccia+instanton/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Coleman-De+Luccia+instanton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Coleman-De+Luccia+instanton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
