--- a/pages/1452.html
+++ b/pages/1452.html
@@ -323,19 +323,21 @@ margin-left: 0em;
 <h1 id='related_entries'>Related entries</h1>
 
 <ul>
+<li><a class='existingWikiWord' href='/nlab/show/synthetic+mathematics'>synthetic mathematics</a></li>
+
 <li><a class='existingWikiWord' href='/nlab/show/synthetic+differential+geometry'>synthetic differential geometry</a></li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on May 16, 2009 12:16:18 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (81.153.168.225)
+  Revised on January 21, 2018 04:27:01 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (147.147.173.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/analytic+versus+synthetic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/analytic+versus+synthetic/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/analytic+versus+synthetic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/analytic+versus+synthetic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/analytic+versus+synthetic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/analytic+versus+synthetic/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/analytic+versus+synthetic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/analytic+versus+synthetic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
