--- a/pages/18959.html
+++ b/pages/18959.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      electromagnetic radiation in nLab
+      radiation in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      electromagnetic radiation
+      radiation
   </h1>
 
 
@@ -308,62 +308,44 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <blockquote>
-<p>This entry needs attention.</p>
-</blockquote>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>The <strong>electromagnetic radiation</strong> of some localized body is an <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> caused by (the dynamics of) that body in the limit of a large distance from that body. See also <a class='existingWikiWord' href='/nlab/show/radiation'>radiation</a>, <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a>.</p>
-
-<p>Sometimes one refers to electromagnetic radiation through some medium as simply the presence of an externally caused electromagnetic waves passing through that medium, not specifying any particular source. Sometimes the source of a radiation may be distributed matter in thermal equilibrium (e.g. <a class='existingWikiWord' href='/nlab/show/black+body+radiation'>black body radiation</a>) and the radiation occurs within the medium containing the matter in equilibrium.</p>
-
-<p>Theoretical treatment of a radiation caused by a moving charged and or magnetized body at large distances from the sources involves theoretical issues like multipole expansions, asymptotics of expressions for fields, retarded potentials and so on.</p>
-
-<h2 id='related_concepts'>related concepts</h2>
+    <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/black+body+radiation'>black body radiation</a></li>
-</ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a>, <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a></p>
+</li>
 
-<h2 id='references'>References</h2>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a></p>
+</li>
 
-<ul>
-<li>wikipedia <a href='http://en.wikipedia.org/wiki/Electromagnetic_radiation'>Electromagnetic radiation</a></li>
-</ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a></p>
+</li>
 
-<p>Wikipedia says:</p>
-
-<blockquote>
-<p>Electromagnetic radiation is a particular form of the more general electromagnetic field (EM field), which is produced by moving charges. Electromagnetic radiation is associated with EM fields that are far enough away from the moving charges that produced them, that absorption of the EM radiation no longer affects the behavior of these moving charges. These two types or behaviors of EM field are sometimes referred to as the near and far field. In this language, EMR is merely another name for the far-field.</p>
-</blockquote>
-
-<ul>
-<li>Jackson, <em>Electrodynamics</em> 
- 
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ultra-high+energy+cosmic+ray'>ultra-high energy cosmic rays</a></p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on January 24, 2018 08:21:07 
+  Created on January 24, 2018 08:22:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electromagnetic+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electromagnetic+radiation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/electromagnetic+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electromagnetic+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/electromagnetic+radiation" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/radiation" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/electromagnetic+radiation" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/radiation" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/electromagnetic+radiation" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/radiation" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
