--- a/pages/11382.html
+++ b/pages/11382.html
@@ -1108,6 +1108,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/pp-wave+spacetime'>pp-wave spacetime</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/radiation'>radiation</a></p>
+</li>
 </ul>
 
 <h2 id='References'>References</h2>
@@ -1212,14 +1216,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 23, 2017 05:43:34 
+  Revised on January 24, 2018 08:23:22 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (188.109.125.236)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gravitational+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gravitational+wave/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/gravitational+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gravitational+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gravitational+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gravitational+wave/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/gravitational+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gravitational+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
