--- a/pages/18864.html
+++ b/pages/18864.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -325,7 +325,17 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<ul>
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -343,6 +353,22 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
@@ -353,10 +379,28 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/observable'>observables</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+observable'>local observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/polynomial+observable'>polynomial observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></p>
+</li>
 </ul>
 </li>
 
@@ -387,19 +431,23 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a>,</p>
 </li>
 
 <li>
@@ -408,20 +456,18 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
+</li>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/picture+of+mechanics'>picture of quantum mechanics</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, <a class='existingWikiWord' href='/nlab/show/Moyal+deformation+quantization'>Moyal deformation quantization</a></p>
 </li>
 
 <li>
@@ -429,13 +475,61 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+relation'>Weyl relations</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
 </li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fock+space'>Fock space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theories</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge symmetry</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a>, <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+BRST+cohomology'>local BV-BRST complex</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BV-operator'>BV-operator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+master+equation'>quantum master equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ward+identity'>master Ward identity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field</a> <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a></p>
 </li>
 
 <li>
@@ -447,17 +541,79 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/effective+action+functional'>effective action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+stability'>vacuum stability</a></p>
+</li>
 </ul>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+condition'>renormalization condition</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>gauge anomaly</a>, <a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting field algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+vacuum'>interacting vacuum</a></p>
+</li>
+</ul>
 </li>
 </ul>
 
@@ -467,7 +623,29 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfsen-Shultz+theorem'>Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
 </li>
 
 <li>
@@ -477,13 +655,29 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
+</li>
 </ul>
 
 <h3 id='operator_algebra'>Operator algebra</h3>
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick%27s+lemma'>Wick&#39;s theorem</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></li>
+</ul>
 </li>
 
 <li>
@@ -525,18 +719,22 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</p>
+</li>
 </ul>
 
 <h3 id='perturbative_qft'>Perturbative QFT</h3>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
-</ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwinger-Dyson+equation'>Schwinger-Dyson equation</a></p>
+</li>
 
-<h3 id='euclidean_qft'>Euclidean QFT</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></p>
+</li>
 </ul>
 </div>
 
@@ -1127,7 +1325,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#example'>Example</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#example'>Example</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> a <em>radiative correction</em> is a contribution to the <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> corresponding to <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> that describe exchange of <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual</a> quanta of radiation, such as <a class='existingWikiWord' href='/nlab/show/photon'>photons</a> (for <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a>).</p>
@@ -1139,6 +1337,12 @@ margin-left: 0em;
 </ul>
 
 <p><img src='https://ncatlab.org/nlab/files/LambShiftMainVertexCorrection.png' width='100'/></p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/radiation'>radiation</a></li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -1157,14 +1361,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December 20, 2017 15:47:35 
+  Revised on January 24, 2018 08:23:42 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (176.74.57.166)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/radiative+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/radiative+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/radiative+correction/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/radiative+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/radiative+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
