--- a/pages/18958.html
+++ b/pages/18958.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      electromagnetic radiation in nLab
+      ultra-high energy cosmic ray in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      electromagnetic radiation
+      ultra-high energy cosmic ray
   </h1>
 
 
@@ -308,62 +308,55 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <blockquote>
-<p>This entry needs attention.</p>
-</blockquote>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>The <strong>electromagnetic radiation</strong> of some localized body is an <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a> caused by (the dynamics of) that body in the limit of a large distance from that body. See also <a class='existingWikiWord' href='/nlab/show/radiation'>radiation</a>, <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a>.</p>
-
-<p>Sometimes one refers to electromagnetic radiation through some medium as simply the presence of an externally caused electromagnetic waves passing through that medium, not specifying any particular source. Sometimes the source of a radiation may be distributed matter in thermal equilibrium (e.g. <a class='existingWikiWord' href='/nlab/show/black+body+radiation'>black body radiation</a>) and the radiation occurs within the medium containing the matter in equilibrium.</p>
-
-<p>Theoretical treatment of a radiation caused by a moving charged and or magnetized body at large distances from the sources involves theoretical issues like multipole expansions, asymptotics of expressions for fields, retarded potentials and so on.</p>
-
-<h2 id='related_concepts'>related concepts</h2>
+    <h2 id='references'>References</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/black+body+radiation'>black body radiation</a></li>
-</ul>
+<li>
+<p>Peter L. Biermann et. al <em>The Nature and Origin of Ultra-High Energy Cosmic Ray Particles</em> (<a href='https://arxiv.org/abs/1610.00944'>arXiv:1610.00944</a>)</p>
+</li>
 
-<h2 id='references'>References</h2>
+<li>
+<p>Karl-Heinz Kampert , <em>Ultra-High Energy Cosmic Rays: Recent Results and Future Plans of Auger</em> (<a href='https://arxiv.org/abs/1612.08188'>arXiv:1612.08188</a>)</p>
+</li>
 
-<ul>
-<li>wikipedia <a href='http://en.wikipedia.org/wiki/Electromagnetic_radiation'>Electromagnetic radiation</a></li>
-</ul>
-
-<p>Wikipedia says:</p>
-
-<blockquote>
-<p>Electromagnetic radiation is a particular form of the more general electromagnetic field (EM field), which is produced by moving charges. Electromagnetic radiation is associated with EM fields that are far enough away from the moving charges that produced them, that absorption of the EM radiation no longer affects the behavior of these moving charges. These two types or behaviors of EM field are sometimes referred to as the near and far field. In this language, EMR is merely another name for the far-field.</p>
-</blockquote>
-
-<ul>
-<li>Jackson, <em>Electrodynamics</em> 
- 
+<li>
+<p>Pierre Auger Collaboration, <em>Observation of a Large-scale Anisotropy in the Arrival Directions of Cosmic Rays above <math class='maruku-mathml' display='inline' id='mathml_b4984330f513cbbb330ffb8a2b1ea48c82333f52_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>8</mn><mo>×</mo><msup><mn>10</mn> <mn>18</mn></msup><mi>ev</mi></mrow><annotation encoding='application/x-tex'>8 \times 10^{18} ev</annotation></semantics></math></em> (<a href='https://arxiv.org/abs/1709.07321'>arXiv:1709.07321</a>)</p>
 </li>
 </ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Ultra-high-energy_cosmic_ray'>Ultra-high-energy cosmic ray</a></em></li>
+</ul>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/radiation'>radiation</a></li>
+</ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 24, 2018 08:21:07 
+  Created on January 24, 2018 08:24:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (185.46.137.19)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electromagnetic+radiation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electromagnetic+radiation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/electromagnetic+radiation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electromagnetic+radiation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/ultra-high+energy+cosmic+ray" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/electromagnetic+radiation" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/ultra-high+energy+cosmic+ray" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/electromagnetic+radiation" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/ultra-high+energy+cosmic+ray" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/electromagnetic+radiation" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/ultra-high+energy+cosmic+ray" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
