--- a/pages/3081.html
+++ b/pages/3081.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -413,11 +413,13 @@ margin-left: 0em;
 <p>
  
  
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on January 27, 2018 02:53:09 
+  Revised on January 27, 2018 03:00:37 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
   (95.148.226.129)
 </div>
