--- a/pages/18187.html
+++ b/pages/18187.html
@@ -308,9 +308,9 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>John McTaggart Ellis McTaggart<sup id='fnref:1'><a href='#fn:1' rel='footnote'>1</a></sup> (1866–1925) was a British <a class='existingWikiWord' href='/nlab/show/metaphysics'>metaphysician</a>. He was part of British <a class='existingWikiWord' href='/nlab/show/idealism'>idealism</a>, that had originated the German idealism with its key figures <a class='existingWikiWord' href='/nlab/show/Immanuel+Kant'>Kant</a>, <a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>Hegel</a>, <a class='existingWikiWord' href='/nlab/show/Johann+Fichte'>Fichte</a>, and <a class='existingWikiWord' href='/nlab/show/Schelling'>Schelling</a>. He was influential on the young <a class='existingWikiWord' href='/nlab/show/Bertrand+Russell'>Bertrand Russell</a>.</p>
+    <p>John McTaggart Ellis McTaggart<sup id='fnref:1'><a href='#fn:1' rel='footnote'>1</a></sup> (1866–1925) was a British <a class='existingWikiWord' href='/nlab/show/metaphysics'>metaphysician</a>. He was part of British <a class='existingWikiWord' href='/nlab/show/idealism'>idealism</a>, that had originated in German idealism with its key figures <a class='existingWikiWord' href='/nlab/show/Immanuel+Kant'>Kant</a>, <a class='existingWikiWord' href='/nlab/show/Georg+Hegel'>Hegel</a>, <a class='existingWikiWord' href='/nlab/show/Johann+Fichte'>Fichte</a>, and <a class='existingWikiWord' href='/nlab/show/Schelling'>Schelling</a>. He was influential on the young <a class='existingWikiWord' href='/nlab/show/Bertrand+Russell'>Bertrand Russell</a>.</p>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_b436549833761bec7ca2421dd56f7d20bc45023c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_fc1f938c2e56dc26c9bc98b24349f783be63c462_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/mysticism'>mysticism</a></li>
@@ -329,14 +329,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May  3, 2017 02:21:44 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on January 28, 2018 19:41:45 
+  by <a class="existingWikiWord" href="/nlab/show/Daniel+Luckhardt">Daniel Luckhardt</a>
+  (2a02:810d:640:8a0:4df4:b08a:c9ef:50d6)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/J.M.+Ellis+McTaggart" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/J.M.+Ellis+McTaggart/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/J.M.+Ellis+McTaggart" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/J.M.+Ellis+McTaggart" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/J.M.+Ellis+McTaggart" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/J.M.+Ellis+McTaggart/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/J.M.+Ellis+McTaggart" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/J.M.+Ellis+McTaggart" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
